<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout android:orientation="vertical" android:background="@android:color/transparent" android:paddingLeft="5.0px" android:paddingRight="5.0px" android:layout_width="fill_parent" android:layout_height="fill_parent"  
        xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/FindTheBeer_Dialog">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView  android:src="@drawable/security_alert"  android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:textStyle="bold" android:paddingLeft="15.0dip" android:paddingBottom="15.0dip" style="@style/FindTheBeer_Dialog_Text"   android:textSize="17dp"  android:text="@string/menu_exit_summary"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:id="@id/ui_si" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ui_si" android:layout_weight="1.0" style="@style/FindTheBeer_FormInnerButton_Left" />
                <Button android:id="@id/ui_no" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ui_no" android:layout_weight="1.0" style="@style/FindTheBeer_FormInnerButton_Center" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
