<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        style="?textLarge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_text" />

    <ScrollView
        style="?pageBackground"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                style="?whiteBackground"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ToggleButton
                    android:id="@id/insertButton"
                    style="?buttonbk"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5"
                    android:text="@string/insert"
                    android:textOff="@string/insert_off"
                    android:textOn="@string/insert_on" />

                <ToggleButton
                    android:id="@id/findButton"
                    style="?buttonred"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5"
                    android:text="@string/insert_now"
                    android:textOff="@string/insert_now"
                    android:textOn="@string/insert_now" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                style="?whiteBackground"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    style="?whiteBackground"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/value_style_voice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/voiceset_1"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:id="@id/value_style"
                        style="?listItem"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mygeo_label_select"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <View
                    style="?listDivider"
                    android:layout_width="fill_parent"
                    android:layout_height="1sp" />

              <LinearLayout
                    style="?whiteBackground"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/value_seek_voice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/voiceset_1"
                        android:layout_gravity="center_vertical" />
                    
                    <TextView
                        android:id="@id/value_seek"
                        style="?listItem"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mygeo_label_distance"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <TextView
                    android:id="@+id/idle_seek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hidden_LinearLayout"
                style="?whiteBackground"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <!-- The buttons at the bottom of the screen. -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            style="?whiteBackground"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <ProgressBar
                android:id="@id/prog_conn"
                style="?progressbar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

            <TextView
                android:id="@id/searchPropertiesButton"
                style="?listItem"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_button"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>